# microbit-input

./: Cargo.toml  Embed.toml  README.md
src/: main.rs  serial.rs
