[package]
name = "microbit-input"
authors =["impr"]
version = "0.1.0"
edition = "2021"


[dependencies]
cortex-m-rt = "0.7.3"
embedded-io = "0.6.1"
embedded-hal = "0.2.6"
microbit-v2 = "0.15.0"
panic-rtt-target = "0.1.3"
rtt-target = "0.5.0"

[dependencies.cortex-m]
version = "0.7.7"
features = ["inline-asm", "critical-section-single-core"]